# earth

./: .prettierrc  .stylelintrc  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  context.tsx  layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/plugins/: mod.rs  system_tray.rs  utils.rs
src-tauri/src/services/: bing.rs  cmd.rs  config.rs  earth.rs  mod.rs  pexels.rs  storage.rs
src/page/wallpaper/: index.tsx
src/style/: global.less  layout.module.less
src/utils/: changeTheme.ts  lazyload.tsx  useStorage.ts
