[package]
name = "earth-ui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "dialog", "fs-read-file", "icon-png", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
toml = "0.5.10"
reqwest = { version = "0.11", features = ["json", "socks", "stream"] }
wallpaper = { version = "3.2.0", features = ["from_url"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
